--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
+    "start": "cd server; coffee index.coffee",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +13,6 @@
     "body-parser": "^1.8.2",
     "express-session": "^1.0.0",
     "sequelize": "^1.7.10",
-    "sqlite3": "^2.2.7",
+    "sqlite3": "^2.2.7"
   }
 }
