--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "cd server; coffee index.coffee",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "casperjs test test.coffee"
   },
   "author": "",
   "license": "ISC",
