--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "cd server; coffee app.coffee",
-    "test": "casperjs test test.coffee"
+    "test": "casperjs test tests/{1,2,3}.coffee"
   },
   "author": "",
   "license": "ISC",
