--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.8.2",
     "express-session": "^1.0.0",
     "sequelize": "^1.7.10",
-    "sqlite3": "^2.2.7"
+    "sqlite3": "^2.2.7",
+    "coffee-script": "^1.9.1",
+    "express": "^4.12.3"
   },
   "devDependencies": {
     "grunt": "*",
