--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.8.2",
+    "coffee-script": "^1.9.1",
+    "express": "^4.12.3",
     "express-session": "^1.0.0",
     "sequelize": "^1.7.10",
     "sqlite3": "3.0.5",
     "coffee-script": "^1.9.1",
     "express": "^4.12.3"
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {
     "grunt": "*",
