--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sequelize": "^1.7.10",
     "sqlite3": "3.0.5",
     "coffee-script": "^1.9.1",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {
