--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "body-parser": "^1.8.2",
-    "coffee-script": "^1.9.1",
-    "express": "^4.12.3",
-    "express-session": "^1.0.0",
-    "sequelize": "^1.7.10",
-    "sqlite3": "3.0.5",
-    "coffee-script": "^1.9.1",
-    "express": "^4.12.3",
-    "socket.io": "^1.3.5"
+    "express-session": "^1.11.1",
+    "sequelize": "^2.0.6",
+    "socket.io": "^1.3.5",
+    "sqlite3": "^3.0.5"
   },
   "devDependencies": {
     "grunt": "*",
