--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.12.3",
     "body-parser": "^1.8.2",
     "express-session": "^1.0.0",
     "sequelize": "^1.7.10",
-    "sqlite3": "^2.2.7",
-    "coffee-script": "^1.9.1",
-    "express": "^4.12.3"
+    "sqlite3": "3.0.5"
   },
   "devDependencies": {
     "grunt": "*",
