--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
-    "sequelize": "^2.0.6",
+    "sequelize": "git://github.com/sequelize/sequelize.git#7c9d1d7b3b4ff4666264e05d7fabc45cf45e6d84",
     "socket.io": "^1.3.5",
     "sqlite3": "^3.0.5"
   },
   "devDependencies": {
     "grunt": "*",
     "grunt-contrib-watch": "*",
-    "grunt-contrib-coffee": "*"
+    "grunt-contrib-coffee": "*",
+    "grunt-shell": "*"
   }
 }
